--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,16 +11,29 @@
 		<script src="./js/app.js"></script>
 
 		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
+		<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" /> -->
 
 		<!-- jQuery library -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+		<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
 
 		<!-- Latest compiled JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+		<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
 	</head>
 	<body>
 		<h2 class="alert alert-info text-center">This is a simple Python backend project</h2>
+		<p>
+			This project supports for:
+			<ol>
+				<li>Restful APIs</li>
+				<li>Powerful Python scripts</li>
+				<li>Http request header analysis</li>
+				<li>Http response header manipulation</li>
+				<li>Http post and get parameters</li>
+				<li>Database (MySql)</li>
+				<li>Cookie</li>
+				<li>Session</li>
+			</ol>
+		</p>
 		<button class="btn btn-primary" onclick="btnSayHello();">Say Hello</button>
 		<br />
 		<span id="spn_say_hello">
